--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.4",
+    "uuid": "^10.0.0",
     "vue": "latest"
+  },
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.12.1",
+    "@types/uuid": "^10.0.0",
+    "c8": "^10.1.2",
+    "vitest": "^2.0.4"
   }
 }
